--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         />
         <meta name="theme-color" content="" />
         <link rel="manifest" href="/manifest.json" />
+        <link href="https://open.lightxi.com/fonts/Roboto" rel="stylesheet">
         <meta name="description" content="{siteDes}">
         <title>{siteName}</title>
         <script>
